Migrate to more modern Python practices
- Replace requirements.txt with pyproject.toml
- Set newer versions for some Python dependencies, since the versions
  in the original code no longer work with modern Python
- Use a Python venv to run the app

--- a/debian-feed.service
+++ b/debian-feed.service
@@ -4,4 +4,4 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/local/bin/debian-feed /usr/local/etc/debian-feed.json
+ExecStart=/bin/sh -c "exec $APP_ROOT/run.sh 2>&1"
